# Visio

./: .deepsource.toml  .gitignore  .taurignore  Cargo.toml  LICENSE  README.MD  README.md  auto.py  error_handling.py  file_handling.py  nodium.code-workspace  nodium_input-0.1.0.crate  package-lock.json  package.json  run.sh  vite.config.ts.timestamp-1682079302011.mjs
.temp/nodium_debug/: Cargo.toml
.temp/nodium_debug/src/: lib.rs
.temp/nodium_input/: Cargo.toml
docs/: index.md
docs/.obsidian/: workspace.json
extension/nodium_extension_http/: Cargo.toml
extension/nodium_extension_http/src/: main.rs
lib/nodium_io/: Cargo.toml
lib/nodium_io/src/: lib.rs
libs/app/: Cargo.toml
libs/app/src/: app.rs  flow.rs  flows.rs  iced_renderer.rs  lib.rs  node.rs  node_style.rs  plugins.rs  registry.rs  renderer.rs  style_registry.rs  utils.rs  view.rs  warp.rs
libs/components/: Cargo.toml
libs/console/: Cargo.toml
libs/console/src/: command.rs  command_executor.rs  console.rs  lib.rs
libs/controller/: Cargo.toml
libs/controller/src/: input_handler.rs  lib.rs
libs/core/: Cargo.toml
libs/core/src/: crate_installer.rs  lib.rs  plugin_registry.rs
libs/core/src/plugin/: install.rs
libs/dev/: Cargo.toml
libs/dev/src/: lib.rs  node.rs  plugin.rs  types.rs
libs/events/: Cargo.toml
libs/events/src/: events.rs  lib.rs
libs/flow/: Cargo.toml
libs/flow/src/: flow.rs  input.rs  lib.rs  node.rs  output.rs  quad_node.rs  quad_tree.rs  rect.rs  utils.rs
libs/nodium_egui/: Cargo.toml
libs/nodium_egui/src/: lib.rs  node.rs  node_style.rs  style_registry.rs
libs/notime/: Cargo.toml
libs/notime/src/: error.rs  event.rs  lib.rs  message.rs  node.rs  service.rs  tab.rs
libs/pdk/: Cargo.toml
libs/pdk/src/: component.rs  dyn_node.rs  interface.rs  layout.rs  lib.rs  node.rs  plugin.rs  types.rs  window.rs
libs/pdk/src/layout/: empty.rs
libs/plugins/: Cargo.toml
libs/plugins/src/: commands.rs  download.rs  extract_crate_file.rs  lib.rs  plugin_utils.rs  plugins.rs  registry.rs  utils.rs
libs/plugins/src/utils/: build.rs  crate_version_name.rs  download.rs  extract_plugin.rs  folder_name.rs  install.rs  lib_path.rs
libs/styles/iced/src/: iced_app.rs  lib.rs
libs/styles/tauri/: Cargo.toml
libs/styles/yew/: Cargo.toml
libs/styles/yew/src/: lib.rs
libs/view/: Cargo.toml
libs/view/console/: Cargo.toml
libs/view/console/src/: app_handler.rs  command.rs  command_executor.rs  console.rs  key_handler.rs  lib.rs  nodium_view_console.rs  nodium_view_console_impl.rs  view.rs
libs/view/egui/: Cargo.toml
libs/view/egui/src/: lib.rs
libs/view/src/: background.rs  lib.rs  nodes.rs  renderer.rs
libs/view/tauri/: Cargo.toml
libs/view/tauri/src/: lib.rs
plugins/nodium_browser/: Cargo.toml
plugins/nodium_browser/src/: crate_info.rs  crate_table_view.rs  crate_view_table.rs  crates_fetch.rs  download.rs  lib.rs  nodes.rs  utils.rs
plugins/nodium_browser/src/nodes/: download_node.rs
plugins/nodium_browser/src/utils/: download.rs  extract.rs
plugins/nodium_hello_world/: Cargo.toml
plugins/nodium_hello_world/src/: lib.rs
plugins/nodium_http/src/: lib.rs
plugins/nodium_input-0.1.0/: Cargo.toml  Cargo.toml.orig
plugins_old/nodium_browser/: Cargo.toml
plugins_old/nodium_browser/src/: lib.rs  utils.rs
src/: App.css  App.tsx  AppContext.tsx  app.rs  flow.rs  input_handler.rs  main.rs  renderer.rs  styles.css
src-tauri/: Cargo.toml  rustftm.toml  tauri.conf.json
src-tauri/.plugins/nodium_browser/: Cargo.toml
src-tauri/.plugins/nodium_browser/src/: create_service.rs  lib.rs
src-tauri/.plugins/nodium_http/src/: lib.rs
src-tauri/.plugins/nodium_input-0.1.0/: .cargo_vcs_info.json  Cargo.toml.orig
src-tauri/.plugins/nodium_input/src/: lib.rs
src-tauri/libs/app/: Cargo.toml
src-tauri/libs/app/src/: app.rs  lib.rs  renderer.rs  view.rs  warp.rs
src-tauri/libs/controller/: Cargo.toml
src-tauri/libs/controller/src/: controller.rs  lib.rs
src-tauri/libs/events/: Cargo.toml
src-tauri/libs/events/src/: bus.rs  events.rs  lib.rs
src-tauri/libs/pdk/: Cargo.toml
src-tauri/libs/pdk/src/: event.rs  lib.rs  node.rs  plugin.rs  service.rs  window.rs
src-tauri/libs/plugins/src/: extract_crate_file.rs  lib.rs  plugin_utils.rs  plugins.rs  registry.rs
src-tauri/libs/styles/iced/: Cargo.toml
src-tauri/libs/styles/tauri/: Cargo.toml
src-tauri/libs/styles/tauri/src/: lib.rs
src-tauri/libs/view/tauri/: Cargo.toml  tauri.conf.json
src-tauri/libs/view/tauri/src/: lib.rs
src-tauri/plugins/nodium_browser/: Cargo.toml
src-tauri/plugins/nodium_browser/src/: browser_window.rs  crates_io_service.rs  crates_service.rs  fetch_crates.rs  lib.rs  plugin.rs
src-tauri/plugins/nodium_input-0.1.0/src/: lib.rs
src-tauri/src/: commands.rs  config.rs  main.rs  obsidian.rs  utils.rs  vault.rs
src/assets/: AddFilterButton.tsx  AnalyzeButton.tsx  FilterInput.tsx  FilterList.css  FilterList.tsx  ItemRow.tsx  Items.css  Items.tsx  ItemsContainer.tsx  ItemsList.tsx  ItemsTable.tsx  OpenInObsidianButton.tsx
src/components/: EditorArea.tsx  ResizableDrawer.tsx  SideBar.tsx  SideBarIcons.tsx  SideBarWindow.tsx  StatusBar.tsx
src/core/: graph.rs  mod.rs  node.rs  node_type.rs
src/styles/: react-resizable-styles.css
src/ui/: app_controller.rs  mod.rs
