[package]
name = "nodium"
version = "0.1.2"
authors = ["cherob"]
description = "Nodium is an easy-to-use data analysis and automation platform built using Rust, designed to be versatile and modular. Nodium aims to provide a user-friendly visual node-based interface for various tasks."
edition = "2021"
license-file = "LICENSE"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
log = "0.4"
env_logger = "0.9"

async-trait = "0.1.51"

nodium-app = { path = "libs/app", version = "0.1.1" }
nodium-pdk = { path = "libs/dev", version = "0.1.1" }

[dependencies.nodium-console]
path = "libs/console"
version = "0.1.0"