[package]
name = "nodium-app"
version = "0.0.0"
description = "An IDE with a focus on simplicity and speed."
authors = ["drumni"]
license = ""
repository = ""
edition = "2021"

[dependencies]
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
toml = "0.8.1"
serde = { version = "1.0.130", features = ["derive"] }
rand = "0.8.4"
# serde_json = "1.0.68"

# use lib/flow
nodium_flow = { path = "./libs/flow" }
nodium_view = { path = "./libs/view" }
nodium_controller = { path = "./libs/controller" }