[package]
name = "nodium"
version = "0.1.2"
authors = ["cherob"]
description = "Nodium is an easy-to-use data analysis and automation platform built using Rust, designed to be versatile and modular. Nodium aims to provide a user-friendly visual node-based interface for various tasks."
edition = "2021"
license-file = "LICENSE"


[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }

tauri = { version = "1.2.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
log = "0.4"
env_logger = "0.9"

nodium-tauri = { path = "libs/view/tauri" , version = "0.1.0" }
nodium-plugins = { path = "libs/plugins", version = "0.1.1" }
nodium-app = { path = "libs/app", version = "0.1.1" }
nodium-events = { path = "libs/events" , version = "0.1.2" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
