[package]
name = "nodium-app"
authors = ["cherob"]
description = "Nodium App, a GUI for Nodium"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
toml = "0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
egui = "0.15.0"
epi = "0.15.0"
eframe = "0.15.0"
crates_io_api = "0.5.1"
regex = "1.5.4"
tokio = { version = "1.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.35"

nodium-events = { path = "../events" }

log = "0.4"
env_logger = "0.9"