[package]
name = "nodium-app"
authors = ["cherob"]
description = "Nodium App, a GUI for Nodium"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
nodium-events = { path = "../events", version = "0.1.2" }
nodium-pdk = { path = "../pdk", version = "0.1.1" }
nodium-plugins = { path = "../plugins", version = "0.1.1" }
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }

tokio = { version = "1.27.0", features = ["macros", "sync", "rt"] }

crates_io_api = "0.5.1"