[package]
name = "nodium-app"
authors = ["cherob"]
description = "Nodium App, a GUI for Nodium"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
crates_io_api = "0.5.1"
regex = "1.5.4"
tokio = { version = "1.27.0", features = ["full"] }

async-trait = "0.1.51"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

nodium-pdk = { path = "../pdk", version = "0.1.1" }

log = "0.4"
env_logger = "0.10"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
dirs-next = "2.0"


reqwest = "0.11"