[package]
name = "nodium-events"
authors = ["cherob"]
description = "A simple event system for Rust"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }

tokio = { version = "1.27.0", features = ["macros", "sync"] }
