# libs/nodium-pdk/Cargo.toml

[package]
name = "nodium-pdk"
version = "0.1.1"
edition = "2021"
description = "Nodium Plugin Development Kit: A Rust library for building Nodium plugins with Services and Nodes"
authors = ["cherob"]
license = "AGPL-3.0"

[dependencies]
nodium-events = { path = "../events", version = "0.1.2" }
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }

tokio = { version = "1.27.0", features = ["sync"] }

abi_stable = "0.8.0"