[package]
name = "nodium-plugins"
description = "Nodium plugin system"
authors = ["cherob"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
libloading = "0.7"
serde_json = "1.0"
dirs-next = "2.0"

nodium-events = { path = "../events", version = "0.1.1" }
nodium-pdk = { path = "../pdk", version = "0.1.0" }

log = "0.4"
env_logger = "0.9"