[package]
name = "nodium-plugins"
description = "Nodium plugin system"
authors = ["cherob"]
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
nodium-events = { path = "../events", version = "0.1.2" }
nodium-pdk = { path = "../pdk", version = "0.1.1" }
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"

tokio = { version = "1.27.0", features = ["full"] }

libloading = "0.6.7"

tar = "0.4"
flate2 = "1.0"

indicatif = "0.15.0"