[package]
name = "nodium-plugins"
description = "Nodium plugin system"
authors = ["cherob"]
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
dlopen = "0.1"
dlopen_derive = "0.1"
serde_json = "1.0"
dirs-next = "2.0"

nodium-events = { path = "../events", version = "0.1.2" }
nodium-pdk = { path = "../pdk", version = "0.1.1" }

log = "0.4"
env_logger = "0.9"

reqwest = "0.11"
tokio = { version = "1.27.0", features = ["full"] }