[package]
name = "nodium_browser"
version = "0.1.0"
authors = ["cherob"]
description = "Nodium plugin browser"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
tokio-util = "0.7.8"

thin_trait_object = "1.1.2"

nodium-pdk = { path = "../../libs/pdk", version = "0.1.1" }

log = "0.4"
env_logger = "0.10"

serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1.27.0", features = ["full"] }

tar = "0.4"
flate2 = "1.0"

[lib]
name = "nodium_browser"
crate-type = ["cdylib"]