[package]
name = "nodium-yew"
version = "0.1.0"
authors = ["cherob"]
edition = "2021"

[dependencies]
yew = "0.20.0"
wasm-bindgen = "0.2.79"

nodium-app = { path = "../../app", version = "0.1.0" }
nodium-controller = { path = "../../controller", version = "0.1.0" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
