[package]
name = "nodium-console"
version = "0.1.0"
authors = ["cherob"]
edition = "2021"
description = "Nodium EGUI Integration"

[dependencies]

nodium-app = { path = "../../app", version = "0.1.1" }
nodium-pdk = { path = "../../pdk", version = "0.1.1" }

serde_json = "1.0.68"

clearscreen = "2.0.1"
crossterm = { version = "0.22", features = ["serde"] }

log = "0.4"
env_logger = "0.10"

# tokio only for spawn
tokio =  { version = "1.27.0", features = ["rt-multi-thread", "macros"] }

async-trait = "0.1.51"
