[package]
name = "nodium-events"
authors = ["cherob"]
description = "A simple event system for Rust"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["macros", "sync"] }

log = "0.4"
env_logger = "0.9"
